--- a/backend/package.json
+++ b/backend/package.json
@@ -31,8 +31,9 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.0.20",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.0.20",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
@@ -51,6 +52,7 @@
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -61,6 +63,8 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/buffer-to-stream": "^1.0.3",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/mongodb": "^4.0.6",
@@ -75,7 +79,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.6.0",
+    "prisma": "^6.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
