--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,8 +13,9 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "esModuleInterop": true, // AJOUTÉ
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "types": ["node"]
