Refactor Send component and add deployment config

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,13 +12,14 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
+    "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true, // AJOUTÉ
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"]
+    "types": ["node", "jest"]
 
   }
 }
