Fix: remove jest types and ensure node types are available

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,8 +20,9 @@
     "noImplicitAny": true,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"]
+    "types": ["node", "jest"],
+
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
