Fix: remove jest types and ensure node types are available

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,6 +11,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strict": true,
