--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "postinstall": "npm install next"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -39,5 +40,6 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+
 }
