fix: add next to dependencies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,31 @@
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
+=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+=
 DATABASE_URL="mongodb+srv://<USERNAME>:<PASSWORD>@cluster0.mongodb.net/<DB_NAME>?retryWrites=true&w=majority"
-
-JWT_SECRET="ta_clé_sécurisée"
-
+=
+JWT_ACCESS_TOKEN_SECRET =
+=
 EMAIL_USER="ton.email@gmail.com"
-
+=
 EMAIL_PASS="ton_mot_de_passe_app"
-
-CLOUDINARY_NAME="nom_cloudinary"
-
-CLOUDINARY_API_KEY="clé_api"
-
-CLOUDINARY_API_SECRET="secret_api"
-
-FRONTEND_URL="https://bloghub.vercel.app" # à mettre à jour après le déploiement du frontend
-
+=
+CLOUDINARY_NAME =
+=
+CLOUDINARY_API_KEY =
+=
+CLOUDINARY_API_SECRET =
+=
+FRONTEND_URL =
+=
 JWT_ACCESS_TOKEN_EXPIRATION_TIME="3600s"
-
-
+=
 #  _   _             _       ___  _____  
 # | \ | |           | |     |_  |/  ___|  
 # |  \| |  ___  ___ | |_      | |\ `--.
 # | . ` | / _ \/ __|| __|     | | `--. \
 # | |\  ||  __/\__ \| |_  /\__/ //\__/ /
 # \_| \_/ \___||___/ \__|.\____/ \____/
-
+=
