fix: add next to dependencies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,8 @@ DATABASE_URL="mongodb+srv://<USERNAME>:<PASSWORD>@cluster0.mongodb.net/<DB_NAME>
 =
 JWT_ACCESS_TOKEN_SECRET =
 =
+JWT_VERIFICATION_TOKEN_SECRET=
+=
 EMAIL_USER="ton.email@gmail.com"
 =
 EMAIL_PASS="ton_mot_de_passe_app"
